Fix small view height on mobile for cards

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -355,6 +355,6 @@ body {
     @media screen and (max-width: 850px) {
         grid-gap: 24px;
         grid-template-columns: repeat(1, 3fr);
-        grid-auto-rows: 40vw;
+        grid-auto-rows: 70vh;
     }
 }
